--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   image_picker: ^1.1.2
   cupertino_icons: ^1.0.8  # Optional, useful for iOS-style icons
   provider: ^6.1.2
+  http_parser: ^4.0.0
+  path: ^1.9.0
 
 
 dev_dependencies:
